# image-diff-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  component.wasm  diff.wasm  gxx_personality_v0_stub.cpp  image_diff.js  image_diff.wasm
.github/workflows/: ci.yaml
cli/: Cargo.toml
cli/examples/: test.rs
cli/src/: main.rs
core/: Cargo.toml  README.md  build.rs
core/examples/: compare.rs  test.rs
core/src/: compare.rs  decoder.rs  encoder.rs  error.rs  expander.rs  lib.rs  main.rs  test.c  test.cpp  webp.c  webp.rs
examples/: test.rs
js/: README.md  index.core.wasm  index.core2.wasm  index.d.ts  index.mjs  package.json  pnpm-lock.yaml
js/examples/: index.mjs
js/interfaces/: bokuweb-image-diff-types.d.ts  wasi-clocks-wall-clock.d.ts  wasi-filesystem-types.d.ts  wasi-io-streams.d.ts
node/: README.md  index.core2.wasm  package.json
node/examples/: index.mjs
node/interfaces/: bokuweb-image-diff-types.d.ts
src/: lib.rs  test.c
wasm/: Cargo.toml  build.rs
wasm/examples/: index.js
wasm/src/: lib.rs  main.rs
wasm/wit/: image-diff.wit
