[package]
name = "image-diff-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_diff_rs"
path = "src/lib.rs"

[dependencies]
pixelmatch-rs = { git = "https://github.com/bokuweb/pixelmatch-rs.git" }

[build-dependencies]
cc = "1.0"