[package]
name = "image-diff-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "image_diff_rs"
path = "src/lib.rs"

[dependencies]
pixelmatch-rs = { git = "https://github.com/bokuweb/pixelmatch-rs.git" }
image = { version = "0.25.0", default-features = false, features=["gif", "jpeg", "png", "tiff", "bmp"] }
thiserror = "1.0"

[build-dependencies]
cc = "1.0"